syntax = "proto3";

message Project {
    enum State {
        PROJECT_IDLE = 0;
        PROJECT_SERVING = 1;
    }
    string name = 1;
    string path = 2;
    string last_modified = 3;
    State state = 4;
    optional string socket = 5;
}

message Request {
    message ListProjects {};
    message NewProject {
        string path = 1;
    }
    message DeleteProject {
        string path = 1;
    }
    message ServeProject {
        string path = 1;
    }
    oneof what {
        ListProjects list_projects = 1;
        NewProject new_project = 2;
        DeleteProject delete_project = 3;
        ServeProject serve_project = 4;
    }
}

message Response {
    enum Status {
        OK = 0;
        WRONG_PROTOCOL = 1;
        WRONG_PROJECT = 2;
        WRONG_PATH = 3;
        INTERNAL_ERROR = 4;
        NOT_IMPLEMENTED = 5;
    }

    message ListProjects {
        repeated Project projects = 2;
    }

    message NewProject {
        Project project = 2;
    }

    message DeleteProject {
        string path = 2;
    }

    message ServeProject {
    }

    Status status = 1;
    oneof result {
        string error = 2;
        ListProjects list_projects = 3;
        NewProject new_project = 4;
        DeleteProject delete_project = 5;
        ServeProject serve_project = 6;
    }
}

message OnUpdate {
    message NewProject {
        string path = 1;
    }
    message DeleteProject {
        string path = 1;
    }
    message ProjectStateChanged {
        string path = 1;
        Project.State new_state = 2;
    }
    oneof what {
        NewProject new_project = 2;
        DeleteProject delete_project = 3;
        ProjectStateChanged project_state_changed = 4;
    }
}
